<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckInProgressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_check_in_progress_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/check_in_menu_title"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <!-- Parks -->
        <TextView
            android:id="@+id/text_view_check_in_progress_parks"
            style="@style/style_check_in_progress_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in_progress_parks_text" />

        <ProgressBar
            android:id="@+id/progress_bar_parks"
            style="@style/style_check_in_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/style_parks_color" />

        <!-- Landmarks -->
        <TextView
            android:id="@+id/text_view_check_in_progress_landmarks"
            style="@style/style_check_in_progress_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in_progress_landmarks_text" />

        <ProgressBar
            android:id="@+id/progress_bar_landmarks"
            style="@style/style_check_in_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Restaurants -->
        <TextView
            android:id="@+id/text_view_check_in_progress_restaurants"
            style="@style/style_check_in_progress_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in_progress_restaurants_text" />

        <ProgressBar
            android:id="@+id/progress_bar_restaurants"
            style="@style/style_check_in_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Venues -->
        <TextView
            android:id="@+id/text_view_check_in_progress_venues"
            style="@style/style_check_in_progress_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in_progress_venues_text" />

        <ProgressBar
            android:id="@+id/progress_bar_venues"
            style="@style/style_check_in_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>